2001-08-26  Seth Nickell  <snickell@stanford.edu>

	* foobar-widget.c:

	Include time.h since we use time_t structures.
	
	* gnome-panel-properties.c: (show_page):
	* nothing.cP:

	Call gtk_notebook_set_current_page as gtk_notebook_set_page
	is deprecated.

2001-08-18  Martin Baulig  <baulig@suse.de>

	* Makefile.am: Added rules to create panel-typebuiltins.[ch].

	* panel-typebuiltins.[ch]: Create these files from glib-mkenums.

2001-08-12  Martin Baulig  <baulig@suse.de>

	* Makefile.am: Put gwmh back, less work this way.

2001-08-12  Martin Baulig  <baulig@suse.de>

	* extern.c (panel_corba_gtk_init): Make this actually work.

	* Makefile.am: Renamed panel to panel-2, commented out the
	applet and status libraries, removed everything else.

	* panel.server.in: New file.

	* panel.gnorba, panel.soundlist: Removed.

2001-08-12  Martin Baulig  <baulig@suse.de>

	* main.c: Put in some protection so that panel won't start up
	unless explicitly told to - so it won't ruin your desktop if you
	accidentally start it.

2001-08-11  Martin Baulig  <baulig@suse.de>

	* Makefile.am: Renamed the `panel-temp' target back to `panel'.

2001-08-11  Martin Baulig  <baulig@suse.de>

	* scroll-menu.[ch]: Removed.

2001-08-11  Martin Baulig  <baulig@suse.de>

	* extern.c: Ported to GTK+ 2.0, but `#ifdef FIXME' the CORBA
	stuff - will be fixed after dinner :-)

	* launcher.c Ported to GTK+ 2.0, but `#ifdef FIXME' large parts
	of this file.

	* menu-properties.[ch]: #ifdef FIXME some stuff.

	* scroll-menu.[ch]: Ported to GTK+ 2.0.

	* swallow.[ch]: Ported to GTK+ 2.0, but `#ifdef FIXME'.

2001-08-11  Martin Baulig  <baulig@suse.de>

	* Makefile.am: Disable the gwmh stuff for the moment and
	#ifdef FIXME it everywhere.

2001-08-09  Martin Baulig  <baulig@suse.de>

	* panel-include.h: #include <libgnome/gnome-i18n.h> and
	<libgnome/gnome-util.h>.

2001-08-09  Martin Baulig  <baulig@suse.de>

	* Makefile.am: Added some more files to panel-temp.
