@@ -9,7 +9,6 @@
 #include <unistd.h>
 #include <sys/types.h>
 #include <sys/wait.h>
-#include <libgnomecompat.h>
 
 #include "panel-include.h"
 
