@@ -1,3 +1,14 @@
+2001-09-01  Darin Adler  <darin@bentspoon.com>
+
+	* conditional.c:
+	* drawer.c:
+	* main.c:
+	* menu.c:
+	* panel_config.c:
+	* session.c:
+	* session.h:
+	Fix includes to start on the porting to GNOME 2.
+
 2001-08-26  Seth Nickell  <snickell@stanford.edu>
 
 	* foobar-widget.c:
